<resources>
    <string name="app_name">Nota10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_notes_fab">Add Notes</string>
    <string name="title_notes_hint">Título</string>
    <string name="body_notes_hint">Escreva...</string>
    <string name="send_button">Enviar</string>
    <string name="remove_note_title">Remover nota</string>
    <string name="confirm_remove_note">Tem certeza que deseja remover?</string>
    <string name="button_yes">Sim</string>
    <string name="button_negative">Não</string>
    <string name="sucessful_remove_note">Nota removida com sucesso!</string>
    <string name="sucessful_insert_note">Nota inserida com sucesso!</string>
    <string name="sucessful_update_note">Nota atualizada com sucesso!</string>
    <string name="button_update">Atualizar</string>
    <string name="fill_the_fields_correctly">Preencha todos os campos corretamente!</string>
    <string name="create_note">Criar Nota</string>
    <string name="palette">Cores</string>
    <string name="reminder">Lembrete</string>
    <string name="update_note_top_bar">Atualizar Nota</string>
    <string name="share_button_top">Compartilhar</string>
    <string name="create_button">Criar</string>
    <string name="search">Search</string>
    <string name="colors">Cores</string>
    <string name="reminder_title">Lembrete</string>

    <string name="today">Hoje</string>
    <string name="tomorrow">Amanhã</string>
    <string name="pick_a_date">Escolha uma data...</string>
    <string name="pick_a_hour">Escolha um horário...</string>
    <string name="button_confirm">OK</string>
    <string name="button_cancel">Cancelar</string>

    <string name="date_format">%1d de %2s de %3d</string>
    <string name="time_format">%1d:%2d</string>
    <string name="button_delete">Deletar</string>
    <string name="error_time">A hora já foi ultrapassada</string>
    <string name="template_label_date">Dia, Data, Hora</string>
    <string name="image_gallery">Image Gallery</string>

</resources>