<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reminder"
        android:title="@string/reminder"
        android:contentDescription="@string/reminder"
        android:icon="@drawable/ic_alarm"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/palette"
        android:title="@string/palette"
        android:icon="@drawable/ic_palette"
        android:contentDescription="@string/palette"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/share"
        android:contentDescription="@string/share_button_top"
        android:icon="@drawable/ic_share"
        android:title="@string/share_button_top"
        app:showAsAction="ifRoom" />


</menu>