<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:background="@drawable/rounded_corner_alert_dialog"
    android:backgroundTint="@color/white"
    android:paddingHorizontal="20dp"
    android:paddingTop="8dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/text_reminder"
        style="@style/Titles_Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/text_reminder"
        app:layout_constraintTop_toBottomOf="@id/text_reminder" />

    <Button
        android:id="@+id/button_date_reminder"
        style="@style/ThemeOverlay.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/color_default"
        android:text="@string/pick_a_date"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:icon="@drawable/ic_calendar"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_reminder" />

    <Button
        android:id="@+id/button_time_reminder"
        style="@style/ThemeOverlay.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/color_default"
        android:text="@string/pick_a_hour"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:icon="@drawable/ic_time"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_date_reminder" />

    <Button
        android:id="@+id/button_confirm"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/color_default"
        android:fontFamily="@font/andika"
        android:text="@string/button_confirm"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/button_time_reminder"
        app:layout_constraintTop_toBottomOf="@id/button_time_reminder" />

    <TextView
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="13sp"
        android:fontFamily="@font/andika"
        android:text="@string/button_cancel"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/button_confirm"
        app:layout_constraintEnd_toStartOf="@id/button_confirm"
        app:layout_constraintTop_toTopOf="@id/button_confirm" />

    <TextView
        android:visibility="gone"
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/andika"
        android:text="@string/button_delete"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/button_cancel"
        app:layout_constraintEnd_toStartOf="@id/button_cancel"
        app:layout_constraintTop_toTopOf="@id/button_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>